2011-09-13  Bernd Schmidt  <bernds@codesourcery.com>

	* cfgcleanup.c (try_head_merge_bb): If get_condition returns
	NULL for a jump that is a cc0 insn, pick the previous insn for
	move_before.

2011-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/v850/v850.md: Use match_test rather than eq/ne symbol_ref
	throughout file.

2011-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/pa/pa.md: Use match_test rather than eq/ne symbol_ref
	throughout file.

2011-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mn10300/mn10300.md: Use match_test rather than eq/ne
	symbol_ref throughout file.

2011-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/m68k/m68k.md: Use match_test rather than eq/ne symbol_ref
	throughout file.

2011-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/h8300/h8300.md: Use match_test rather than eq/ne symbol_ref
	throughout file.

2011-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/arm/arm.md: Use match_test rather than eq/ne symbol_ref
	throughout file.
	* config/arm/neon.md: Likewise.
	* config/arm/vfp.md: Likewise.
	* config/arm/thumb2.md: Likewise.
	* config/arm/cortex-m4.md: Likewise.

2011-09-13  Sevak Sargsyan <sevak.sargsyan@ispras.ru>

	* config/arm/neon.md (neon_vabd<mode>_2, neon_vabd<mode>_3): New
	define_insn patterns for combine.

2011-09-13  Giuseppe Scrivano  <gscrivano@gnu.org>

	* reorg.c: Always define make_return_insns.

2011-09-13  Jan Hubicka  <jh@suse.cz>

	PR other/49533
	* cgraphunit.c (assemble_thunks_and_aliases): Force alias to be output.

2011-09-13  Jan Hubicka  <jh@suse.cz>

	PR other/49533
	* ipa-inline-transform.c (can_remove_node_now_p): Fix thunkos.

2011-09-13  Paul Brook  <paul@codesourcery.com>
 
	* config/arm/arm.h (ASM_PREFERRED_EH_DATA_FORMAT): Define.
	(ARM_TARGET2_DWARF_FORMAT): Provide default definition.
	* config/arm/linux-eabi.h (ARM_TARGET2_DWARF_FORMAT): Define.